--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
 		"astro": "^5.10.1",
 		"vite": "^7.0.0",
 		"vite-plugin-mkcert": "^1.17.8"
+	},
+	"dependencies": {
+		"storyblok": "^4.3.2"
 	}
 }
